--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "version": "0.2",
     "dumper" : {
-        "schedule" : "0 * * * *", 
+        "schedule" : "0 12 * * *", 
         "data_url" : ["https://storage.googleapis.com/andersen-lab_temp/outbreak_genomics/shapefiles.json.gz"],
         "uncompress" : false
     },
